# Elastic-Rag-doalong

./: README.md  ingest.py  main.py  notebook.ipynb  pyproject.toml  rag_helper.py  rag_helper_function_injection.py  rag_helper_sub_class.py  testelasticmodular.ipynb
